fixed home elements width on mobile devices

--- a/src/app/Features/home/home.component.css
+++ b/src/app/Features/home/home.component.css
@@ -286,6 +286,11 @@
     }
 
     @media screen and (max-width: 1000px) {
+        .intro,  .experiencia, .proyectosWeb, 
+        .proyectos, .sobreMi, .tecnologias{
+            width: 80%;
+        }
+
         .tecnologias .tech-list, .webProj-content {
             display: flex;
             flex-wrap: wrap;
